--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "proxy": "http://localhost:3000",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+ "scripts": {
+  "dev": "vite --host 0.0.0.0",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview"
+},
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
