--- a/Backend/config/.env
+++ b/Backend/config/.env
@@ -1,8 +1,8 @@
 PORT = 4000
 
 MONGO_URI= "mongodb+srv://hospitalManagement:8808228921@cluster0.sv9ks.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-FRONTENT_URL= https://localhost:5173
-DASHBOARD1_URL = https://localhost:5174
+FRONTENT_URL= https://fnrtend1.onrender.com/
+DASHBOARD1_URL = https://prateekdash.onrender.com/
 
 JWT_SECRET_KEY=abcdefghijklmnopqrstuvwxyz
 JWT_EXPIRES=7d
